2005-01-27  Mark McLoughlin  <mark@skynet.ie>

	* lib/util.py: hmm, use GeneralError again.

2005-01-26  Mark McLoughlin  <mark@skynet.ie>

	* lib/util.py: pull username and homedir from
	the passwd database if available.

2005-01-25  Adam Weinberger  <adamw@gnome.org>

	* configure.ac: Added en_CA to ALL_LINGUAS.

2005-01-25  Mark McLoughlin  <mark@skynet.ie>

	* lib/userprofile.py: introduce the concept of a
	"delegate" - a helper class to give a higher level
	interpretation of some changes from a given source.
	
	* lib/sources/paneldelegate.py: an implementation
	of the helper class for the panel's config - so, e.g.,
	when you added an applet you get "applet added" rather
	than a whole bunch of GConf keys changed.
	
	* lib/sources/Makefile.am: add paneldelegate.py.
	
	* lib/sources/filessource.py,
	  lib/sources/gconfsource.py,
	  lib/sources/mozillasource.py: update.
	
	* lib/unittests.py,
	  lib/sources/testsource.py: hook up some more unit
	tests.
	
2005-01-24  Mark McLoughlin  <mark@skynet.ie>

	* lib/storage-modules/: rename to lib/sources -
	these modules are ProfileSource sub-classes, nothing
	to do with the ProfileStorage class - to avoid
	confusion.

	* configure.ac, lib/Makefile.am, lib/config.py.in
	  lib/unittests.py, lib/userprofile.py: update.

2005-01-24  Christian Rose  <menthos@menthos.com>

	* configure.ac: Added "sv" to ALL_LINGUAS.

Fri Jan 21 13:45:19 CET 2005 Daniel Veillard <veillard@redhat.com>

	* lib/dirmonitor.py: do not explode when launched on a real user
	  environment.

Fri Jan 21 12:00:42 CET 2005 Daniel Veillard <veillard@redhat.com>

	* README: small update
	* lib/dirmonitor.py: try to fix problem with older gnome-vfs bindings

2005-01-21  Mark McLoughlin  <mark@skynet.ie>

	* lib/userprofile.py: last few bits of the grand re-naming.
	
	* lib/storage-modules/mozillasource.py: disable for now.

Thu Jan 20 21:44:31 CET 2005 Daniel Veillard <veillard@redhat.com>

	* lib/dirmonitor.py: try to work around a portability problem