@@ -1,5 +1,10 @@
 2005-01-27  Mark McLoughlin  <mark@skynet.ie>
 
+	* lib/protosession.py: checkpoint of the session
+	launching code.
+
+2005-01-27  Mark McLoughlin  <mark@skynet.ie>
+
 	* lib/util.py: hmm, use GeneralError again.
 
 2005-01-26  Mark McLoughlin  <mark@skynet.ie>
